--- a/assignment.html
+++ b/assignment.html
@@ -65,6 +65,41 @@
         .content p {
             color: #555;
         }
+
+        .separate-section {
+    background: linear-gradient(135deg, #ffffff, #eef3f7);
+    margin: 60px 40px;
+    padding: 50px;
+    border-radius: 14px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+}
+
+.separate-section h2 {
+    text-align: center;
+    color: #203a43;
+    margin-bottom: 30px;
+    font-size: 28px;
+}
+
+.separate-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+}
+
+.separate-card {
+    background: #ffffff;
+    padding: 25px;
+    text-align: center;
+    border-radius: 12px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.separate-card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+}
+
     </style>
 </head>
 <body>
@@ -74,10 +109,21 @@
         <ul class="nav-links">
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Services</a></li>
+            <li><a href="">.</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
+
+
+    <section class="separate-section">
+    <h2></h2>
+    <div class="separate-cards">
+        <div class="separate-card">.</div>
+        <div class="separate-card">.</div>
+        <div class="separate-card">.</div>
+    </div>
+</section>
+
 
 </body>
 </html>
