--- a/assignment.html
+++ b/assignment.html
@@ -100,6 +100,52 @@
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
 }
 
+.site-footer {
+    background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
+    color: #e0e0e0;
+    margin-top: 60px;
+}
+
+.footer-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 30px;
+    padding: 50px 40px;
+}
+
+.footer-brand h3 {
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+
+.footer-links h4,
+.footer-social h4 {
+    color: #ffffff;
+    margin-bottom: 12px;
+}
+
+.footer-links a,
+.footer-social a {
+    display: block;
+    text-decoration: none;
+    color: #cccccc;
+    margin-bottom: 6px;
+    transition: color 0.3s ease;
+}
+
+.footer-links a:hover,
+.footer-social a:hover {
+    color: #ffffff;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding: 15px;
+    background: rgba(0, 0, 0, 0.2);
+    font-size: 14px;
+}
+
+
     </style>
 </head>
 <body>
@@ -123,6 +169,35 @@
         <div class="separate-card">.</div>
     </div>
 </section>
+
+
+<footer class="site-footer">
+    <div class="footer-content">
+        <div class="footer-brand">
+            <h3>@</h3>
+            <p>@.</p>
+        </div>
+
+        <div class="footer-links">
+            <h4>@</h4>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </div>
+
+        <div class="footer-social">
+            <h4>@</h4>
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+      @@@@@@@@@@@@@@@@@
+    </div>
+</footer>
 
 
 </body>
